--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "colyseus.js": "^0.14.12",
     "core-js": "^3.15.1",
+    "howler": "^2.2.2",
     "nuxt": "^2.15.7",
-    "portal-vue": "^2.1.7"
+    "portal-vue": "^2.1.7",
+    "sweetalert2": "^11.0.18"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -22,9 +24,11 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@types/howler": "^2.2.2",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.12.1",
     "prettier": "^2.3.2"
   }
