--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "colyseus.js": "^0.14.12",
     "core-js": "^3.15.1",
     "howler": "^2.2.2",
+    "imagekitio-vue": "^1.0.9",
     "nuxt": "^2.15.7",
     "portal-vue": "^2.1.7",
     "sweetalert2": "^11.0.18"
