--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "colyseus.js": "^0.14.12",
     "core-js": "^3.15.1",
     "howler": "^2.2.2",
     "nuxt": "^2.15.7",
     "portal-vue": "^2.1.7",
-    "sweetalert2": "^11.0.18"
+    "sweetalert2": "^11.0.18",
+    "vue-chartkick": "^0.6.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
